Change faulty proceedings citations to journals and some minor control chapter adjustments

--- a/bibtex/Masters.bib
+++ b/bibtex/Masters.bib
@@ -263,7 +263,7 @@ volume = {844},
 year = {2018}
 }
 @article{Greatwood2019a,
-abstract = {A new method for enabling a quadrotor micro air vehicle (MAV) to navigate unknown environments using reinforcement learning (RL) and model predictive control (MPC) is developed. An efficient implementation of MPC provides vehicle control and obstacle avoidance. RL is used to guide the MAV through complex environments where dead-end corridors may be encountered and backtracking is necessary. All of the presented algorithms were deployed on embedded hardware using automatic code generation from Simulink. Results are given for flight tests, demonstrating that the algorithms perform well with modest computing requirements and robust navigation.},
+abstract = {A new method for enabling a quadrotor micro air vehicle (MAV) to navigate unknown environments using reinforcement learning (RL) and model predictive control (MPC) is developed. An efficient implementation of MPC provides vehicle control and obstacle avoidance. RL is used to guide the MAV through complex environments where dead-end corridors may be encountered and backtracking is necessary. All of the presented algorithms were deployed on embedded hardware using automatic code generation from Simulink\texttrademark. Results are given for flight tests, demonstrating that the algorithms perform well with modest computing requirements and robust navigation.},
 author = {Greatwood, Colin and Richards, Arthur G.},
 doi = {10.1007/s10514-019-09829-4},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Greatwood, Richards - 2019 - Reinforcement learning and model predictive control for robust embedded quadrotor guidance and control(2).pdf:pdf},
