--- a/bibtex/Thesis.bib
+++ b/bibtex/Thesis.bib
@@ -63,7 +63,7 @@ volume = {476},
 year = {2020}
 }
 @article{Santos2018,
-abstract = {This paper presents a two-stage cascade control framework to solve hierarchically the trajectory tracking problem of a Tilt-rotor Unmanned Aerial Vehicle (UAV) carrying a suspended load. Initially, a nonlinear dynamic model is presented, which is after decoupled into two subsystems. The outer control system is designed by means of a robust tube-based Model Predictive Control (MPC) strategy, which is used to control the UAV's planar motion and stabilize the suspended load. For the inner control system, the input-output feedback linearization (IOFL) technique combined with the dynamic extension approach and a discrete mixed H2/H∞ controller is considered to control the UAV's altitude and attitude. Simulations results are carried out to corroborate the proposed control strategy.},
+abstract = {This paper presents a two-stage cascaded control framework to solve hierarchically the trajectory tracking problem of a Tilt-rotor Unmanned Aerial Vehicle (UAV) carrying a suspended load. Initially, a nonlinear dynamic model is presented, which is after decoupled into two subsystems. The outer control system is designed by means of a robust tube-based Model Predictive Control (MPC) strategy, which is used to control the UAV's planar motion and stabilize the suspended load. For the inner control system, the input-output feedback linearization (IOFL) technique combined with the dynamic extension approach and a discrete mixed H2/H∞ controller is considered to control the UAV's altitude and attitude. Simulations results are carried out to corroborate the proposed control strategy.},
 author = {Santos, Marcelo A. and Ferramosca, Antonio and Raffo, Guilherme V.},
 doi = {10.1016/j.ifacol.2018.11.180},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Santos, Ferramosca, Raffo - 2018 - Tube-based MPC with Nonlinear Control for Load Transportation using a UAV.pdf:pdf},
