--- a/bibtex/manual.bib
+++ b/bibtex/manual.bib
@@ -148,7 +148,7 @@ title = {{Quad-rotor lifting-transporting cable-suspended payloads control}},
 year = {2015}
 }
 @article{Santos2018,
-abstract = {This paper presents a two-stage cascade control framework to solve hierarchically the trajectory tracking problem of a Tilt-rotor Unmanned Aerial Vehicle (UAV) carrying a suspended load. Initially, a nonlinear dynamic model is presented, which is after decoupled into two subsystems. The outer control system is designed by means of a robust tube-based Model Predictive Control (MPC) strategy, which is used to control the UAV's planar motion and stabilize the suspended load. For the inner control system, the input-output feedback linearization (IOFL) technique combined with the dynamic extension approach and a discrete mixed H2/H∞ controller is considered to control the UAV's altitude and attitude. Simulations results are carried out to corroborate the proposed control strategy.},
+abstract = {This paper presents a two-stage cascaded control framework to solve hierarchically the trajectory tracking problem of a Tilt-rotor Unmanned Aerial Vehicle (UAV) carrying a suspended load. Initially, a nonlinear dynamic model is presented, which is after decoupled into two subsystems. The outer control system is designed by means of a robust tube-based Model Predictive Control (MPC) strategy, which is used to control the UAV's planar motion and stabilize the suspended load. For the inner control system, the input-output feedback linearization (IOFL) technique combined with the dynamic extension approach and a discrete mixed H2/H∞ controller is considered to control the UAV's altitude and attitude. Simulations results are carried out to corroborate the proposed control strategy.},
 author = {Santos, Marcelo A. and Ferramosca, Antonio and Raffo, Guilherme V.},
 doi = {10.1016/j.ifacol.2018.11.180},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Santos, Ferramosca, Raffo - - Tube-based MPC with Nonlinear Control for Load Transportation using a UAV.pdf:pdf},
@@ -212,7 +212,8 @@ doi = {10.1109/ROBOT.2005.1570310},
 isbn = {0-7803-8914-X},
 pages = {1394--1399},
 publisher = {IEEE},
-title = {{Rapid Transport of Suspended Payloads}}
+title = {{Rapid Transport of Suspended Payloads}},
+year = {2005}
 }
 @article{Klausen2017,
 abstract = {In this paper, we consider the problem of trajectory tracking of a multirotor Unmanned Aerial Vehicle carrying a suspended payload. The movement of the suspended payload influences the dynamics of the multirotor, which must be appropriately handled by the controller to achieve satisfactory tracking results. We derive a mathematical model of the interconnected multi-body system using Kane's equations, and develop a non-linear tracking controller based on the backstepping technique. In addition to suppressing the effects of the swinging payload, the controller also compensates for an unknown constant wind disturbance. The origin of the tracking error is proven UGAS (Uniformly Globally Asymptotically Stable) and ULES (Uniformly Locally Exponentially Stable) through Lyapunov analysis. To reduce the swing motion of the suspended load, a nominal swing-free path is generated through open loop shaping filters, then further perturbed through a delayed feedback approach from measured load deflection angles to achieve robustness. The proposed controller structure is verified by simulations and experiments.},
@@ -308,7 +309,7 @@ year = {2020}
 @inproceedings{Li2016,
 abstract = {First, the basic structure and principle of quadrotor UAV and its practical applications are introduced. Then, some control algorithms are also presented, such as, PID, LQR/LQG, H∞, sliding mode, feedback linearization, back stepping, model predictive, robust, adaptive, nested saturation, fuzzy logic, neural network, reinforcement learning, iterative learning, memory and brain emotional learning-based intelligent controllers, and the merits and drawbacks of them are analyzed. At last, we predict the main research direction on the future researches of quadrotor UAV.},
 author = {Li, Lebao and Sun, Lingling and Jin, Jie},
-booktitle = {International Conference on Communication Technology Proceedings, ICCT},
+booktitle = {International Conference on Communication Technology, ICCT},
 doi = {10.1109/ICCT.2015.7399803},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Li, Sun, Jin - - Survey of advances in control algorithms of quadrotor unmanned aerial vehicle(2).pdf:pdf},
 isbn = {9781467370042},
@@ -458,12 +459,12 @@ url = {https://wing.com/australia/canberra/},
 urldate = {2021-10-26},
 year = {2021}
 }
-@inproceedings{Kaiser2018b,
+@article{Kaiser2018b,
 abstract = {Data-driven discovery of dynamics via machine learning is pushing the frontiers of modelling and control efforts, providing a tremendous opportunity to extend the reach of model predictive control (MPC). However, many leading methods in machine learning, such as neural networks (NN), require large volumes of training data, may not be interpretable, do not easily include known constraints and symmetries, and may not generalize beyond the attractor where models are trained. These factors limit their use for the online identification of a model in the low-data limit, for example following an abrupt change to the system dynamics. In this work, we extend the recent sparse identification of nonlinear dynamics (SINDY) modelling procedure to include the effects of actuation and demonstrate the ability of these models to enhance the performance of MPC, based on limited, noisy data. SINDY models are parsimonious, identifying the fewest terms in the model needed to explain the data, making them interpretable and generalizable. We show that the resulting SINDY-MPC framework has higher performance, requires significantly less data, and is more computationally efficient and robust to noise than NN models, making it viable for online training and execution in response to rapid system changes. SINDY-MPC also shows improved performance over linear data-driven models, although linear models may provide a stopgap until enough data is available for SINDY. SINDY-MPC is demonstrated on a variety of dynamical systems with different challenges, including the chaotic Lorenz system, a simple model for flight control of an F8 aircraft, and an HIV model incorporating drug treatment.},
 archivePrefix = {arXiv},
 arxivId = {1711.05501},
 author = {Kaiser, E. and Kutz, J. N. and Brunton, S. L.},
-booktitle = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
 doi = {10.1098/rspa.2018.0335},
 eprint = {1711.05501},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kaiser, Kutz, Brunton - - Sparse identification of nonlinear dynamics for model predictive control in the low-data limit(3).pdf:pdf},
@@ -488,7 +489,7 @@ year = {2016}
 @inproceedings{Klausen2014,
 abstract = {This paper presents a distributed kinematic control law for group coordination for several multicopters and a payload suspended with wires from each multicopter. The complete system with constraints on the wires are modeled in 6 degrees of freedom (DOF), using the Udwadia-Kalaba equation. Velocity controllers for the multicopters are developed to realize the desired motion set by the kinematic controller. This results in a system where the group of multicopters are able to maneuver the payload to a desired position while keeping a desired formation. The results are verified by simulations.},
 author = {Klausen, Kristian and Fossen, Thor I. and Johansen, Tor Arne},
-booktitle = {22nd Mediterranean Conference on Control and Automation, MED 2014},
+booktitle = {22nd Mediterranean Conference on Control and Automation},
 doi = {10.1109/MED.2014.6961567},
 pages = {1371--1376},
 publisher = {IEEE},
@@ -552,10 +553,10 @@ title = {{Model predictive control: Theory and practice - A survey}},
 volume = {25},
 year = {1989}
 }
-@inproceedings{Chen1999,
+@article{Chen1999,
 abstract = {A new approach to model conversion of a state-delay system is introduced in this paper. The discrete-time model is especially derived from the continuous-time system, that it has a wider range for the sampling period in real implementation. A simple method is also proposed to determine the unknown state-delay time from the available discrete-time model, and the continuous-time model is established through some important results demonstrated in this paper.},
 author = {Chen, Chuen Ming and Wang, Kuang Hwa},
-booktitle = {Proceedings of the National Science Council, Republic of China, Part A: Physical Science and Engineering},
+journal = {Proceedings of the National Science Council, Republic of China, Part A: Physical Science and Engineering},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Chen, Wang - 1999 - State-space model conversion of a system with state delay(2).pdf:pdf},
 issn = {02556588},
 keywords = {model conversion,state delay,state-space model},
@@ -977,11 +978,12 @@ year = {2019}
 }
 @inproceedings{Lofberg2004,
 author = {L{\"{o}}fberg, Johan},
-booktitle = {Proceedings of the International Symposium on Computer-Aided Control System Design},
+booktitle = {International Symposium on Computer-Aided Control System Design},
 doi = {10.1109/CACSD.2004.1393890},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/L{\"{o}}fberg - 2004 - YALMIP A toolbox for modeling and optimization in MATLAB.pdf:pdf},
 pages = {284--289},
 title = {{YALMIP: A toolbox for modeling and optimization in MATLAB}},
+publisher = {IEEE},
 year = {2004}
 }
 @article{Gonzalez-deSantos2020,
@@ -1058,7 +1060,7 @@ year = {2011}
 }
 @inproceedings{Starr1983,
 author = {Starr, G.},
-booktitle = {The 22nd Conference on Decision and Control},
+booktitle = {22nd Conference on Decision and Control},
 doi = {10.1109/CDC.1983.269784},
 pages = {1484--1487},
 publisher = {IEEE},
@@ -1072,10 +1074,10 @@ url = {https://www.rgj.com/story/news/money/business/2021/03/04/flirtey-starts-t
 urldate = {2021-10-26},
 year = {2021}
 }
-@inproceedings{Mangan2017,
+@article{Mangan2017,
 abstract = {We develop an algorithm for model selection which allows for the consideration of a combinatorially large number of candidate models governing a dynamical system. The innovation circumvents a disadvantage of standard model selection which typically limits the number of candidate models considered due to the intractability of computing information criteria. Using a recently developed sparse identification of nonlinear dynamics algorithm, the sub-selection of candidate models near the Pareto frontier allows feasible computation of Akaike information criteria (AIC) or Bayes information criteria scores for the remaining candidate models. The information criteria hierarchically ranks the most informative models, enabling the automatic and principled selection of the model with the strongest support in relation to the time-series data. Specifically, we show that AIC scores place each candidate model in the strong support, weak support or no support category. The method correctly recovers several canonical dynamical systems, including a susceptible-exposedinfectious-recovered disease model, Burgers' equation and the Lorenz equations, identifying the correct dynamical system as the only candidate model with strong support.},
 author = {Mangan, N. M. and Kutz, J. N. and Brunton, S. L. and Proctor, J. L.},
-booktitle = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
 doi = {10.1098/rspa.2017.0009},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Mangan et al. - - Model selection for dynamical systems via sparse regression and information criteria(3).pdf:pdf},
 issn = {1364-5021},
@@ -1087,10 +1089,10 @@ title = {{Model selection for dynamical systems via sparse regression and inform
 volume = {473},
 year = {2017}
 }
-@inproceedings{Brunton2016a,
+@article{Brunton2016a,
 abstract = {Understanding dynamic constraints and balances in nature has facilitated rapid development of knowledge and enabled technology, including aircraft, combustion engines, satellites, and electrical power. This work develops a novel framework to discover governing equations underlying a dynamical system simply from data measurements, leveraging advances in sparsity techniques and machine learning. The resulting models are parsimonious, balancing model complexity with descriptive ability while avoiding overfitting. There are many critical data-driven problems, such as understanding cognition from neural recordings, inferring climate patterns, determining stability of financial markets, predicting and suppressing the spread of disease, and controlling turbulence for greener transportation and energy. With abundant data and elusive laws, data-driven discovery of dynamics will continue to play an important role in these efforts.},
 author = {Brunton, Steven L. and Proctor, Joshua L. and Kutz, J. Nathan},
-booktitle = {Proceedings of the National Academy of Sciences},
+journal = {Proceedings of the National Academy of Sciences},
 doi = {10.1073/PNAS.1517384113},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brunton, Proctor, Kutz - - Discovering governing equations from data by sparse identification of nonlinear dynamical systems(2).pdf:pdf},
 issn = {0027-8424},
@@ -1276,9 +1278,9 @@ title = {{CVXGEN: a code generator for embedded convex optimization}},
 volume = {13},
 year = {2012}
 }
-@inproceedings{Smith1957,
+@article{Smith1957,
 author = {{M. Smith}, Otto},
-booktitle = {Proceedings of the IRE},
+journal = {Proceedings of the IRE},
 doi = {10.1109/JRPROC.1957.278530},
 issn = {0096-8390},
 number = {9},
@@ -1287,10 +1289,10 @@ title = {{Posicast Control of Damped Oscillatory Systems}},
 volume = {45},
 year = {1957}
 }
-@inproceedings{Kaheman2020c,
+@article{Kaheman2020c,
 abstract = {Accurately modelling the nonlinear dynamics of a system from measurement data is a challenging yet vital topic. The sparse identification of nonlinear dynamics (SINDy) algorithm is one approach to discover dynamical systems models from data. Although extensions have been developed to identify implicit dynamics, or dynamics described by rational functions, these extensions are extremely sensitive to noise. In this work, we develop SINDy-PI (parallel, implicit), a robust variant of the SINDy algorithm to identify implicit dynamics and rational nonlinearities. The SINDy-PI framework includes multiple optimization algorithms and a principled approach to model selection. We demonstrate the ability of this algorithm to learn implicit ordinary and partial differential equations and conservation laws from limited and noisy data. In particular, we show that the proposed approach is several orders of magnitude more noise robust than previous approaches, and may be used to identify a class of ODE and PDE dynamics that were previously unattainable with SINDy, including for the double pendulum dynamics and simplified model for the Belousov–Zhabotinsky (BZ) reaction.},
 author = {Kaheman, Kadierdan and Kutz, J. Nathan and Brunton, Steven L.},
-booktitle = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
 doi = {10.1098/rspa.2020.0279},
 issn = {1364-5021},
 number = {2242},
@@ -1327,10 +1329,10 @@ publisher = {IEEE},
 title = {{Geometric control and differential flatness of a quadrotor UAV with a cable-suspended load}},
 year = {2013}
 }
-@inproceedings{Champion2019,
+@article{Champion2019,
 abstract = {<p>The discovery of governing equations from scientific data has the potential to transform data-rich fields that lack well-characterized quantitative descriptions. Advances in sparse regression are currently enabling the tractable identification of both the structure and parameters of a nonlinear dynamical system from data. The resulting models have the fewest terms necessary to describe the dynamics, balancing model complexity with descriptive ability, and thus promoting interpretability and generalizability. This provides an algorithmic approach to Occam's razor for model discovery. However, this approach fundamentally relies on an effective coordinate system in which the dynamics have a simple representation. In this work, we design a custom deep autoencoder network to discover a coordinate transformation into a reduced space where the dynamics may be sparsely represented. Thus, we simultaneously learn the governing equations and the associated coordinate system. We demonstrate this approach on several example high-dimensional systems with low-dimensional behavior. The resulting modeling framework combines the strengths of deep neural networks for flexible representation and sparse identification of nonlinear dynamics (SINDy) for parsimonious models. This method places the discovery of coordinates and models on an equal footing.</p>},
 author = {Champion, Kathleen and Lusch, Bethany and Kutz, J. Nathan and Brunton, Steven L.},
-booktitle = {Proceedings of the National Academy of Sciences},
+journal = {Proceedings of the National Academy of Sciences},
 doi = {10.1073/pnas.1906995116},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Champion et al. - - Data-driven discovery of coordinates and governing equations(2).pdf:pdf},
 issn = {0027-8424},
