--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -1,7 +1,7 @@
 \FloatBarrier\section{Linear Quadratic Regulator} \label{sec:lqr}
 
         \paragraph
-        \gls{LQR} is a popular optimal control technique and is an effective swing-damping controller for multirotors with a suspended payload 
+        \gls{LQR} is a popular optimal control technique and is an effective swing-damping controller for a multirotor with a suspended payload 
         \cite{Erasmus2020, Slabber2020, Us2019}.
         The \gls{LQG} technique combines \gls{LQR} with a full-state estimator to control systems where some state variables cannot be measured \cite{Li2016}.
         An \gls{LQG} was effectively used by \cite{Slabber2020} for swing-damping control of a multirotor and suspended payload system.
