--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -8,7 +8,7 @@
         \paragraph
         Recent years have seen a rise in the popularity of payload transportation with \glspl{UAV} \cite{Nakamura2019}.
         These payloads are usually categorised as either a sensor or freight \cite{Vergouw2016}.
-        Sensors like cameras or meteorological instruments can be carried by a \glspl{UAV} for aerial photography or surveying.
+        Sensors like cameras or meteorological instruments can be carried by \glspl{UAV} for aerial photography or surveying.
         Payloads carried as freight include pesticides sprayed over agricultural land, medical parcels carried to remote areas or consumer deliveries.
     
         \paragraph
