--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -6,7 +6,7 @@
     The white-box model was derived by \cite{Slabber2020} and will be presented in the section below.
     The unknown parameters in the model include the payload mass, $m_p$ and the cable length, $l$.
     Two separate methods are used to estimate each parameter.
-    This approach was successfully used by \cite{Erasmus2020} and \cite{Slabber2020} 
+    This approach was successfully used by \cite{Slabber2020} and \cite{Erasmus2020} 
     to implement a \gls{LQR} swing damping controller for a multirotor with unknown suspended payload parameters.
     
 \subsection{White-box model}
@@ -74,10 +74,10 @@
 \subsection{Payload mass estimation}
 
     \paragraph
-    \gls{RLS} is used by \cite{Erasmus2020} and \cite{Slabber2020} to estimate the payload mass.
+    \gls{RLS} is used by \cite{Slabber2020} and \cite{Erasmus2020} to estimate the payload mass.
     It is assumed that the multirotor mass is known before a flight, 
     therefore the payload mass can be estimated from the additional trust required during hover.
-    In both \cite{Erasmus2020} and \cite{Slabber2020} it is demonstrated 
+    In both \cite{Slabber2020} and \cite{Erasmus2020} it is demonstrated 
     that \gls{RLS} is very accurate for the system considered in this work.
     To compare other aspects of the white-box and black-box techniques with more clarity, 
     it will be assumed that the \gls{RLS} method estimates $m_p$ with perfect accuracy.
@@ -109,7 +109,7 @@
     Note that the measured frequency actually represents the damped natural frequency.
     Damping is caused by the velocity controller, friction at the cable attachment, and aerodynamic drag.
     However, it is assumed that the damping coefficient is small enough for the damped natural frequency to closely approximate the theoretical natural frequency.
-    % This method is applied successfully by \cite{Erasmus2020} and \cite{Slabber2020} for cable length estimation.
+    % This method is applied successfully by \cite{Slabber2020} and \cite{Erasmus2020} for cable length estimation.
     
     \paragraph
     Figure~\ref{fig:vel_step_single_pend} shows the payload swing angle response to a position step setpoint.
@@ -122,8 +122,8 @@
     Since $\omega_n$, $m_Q$, $m_p$ and $g$ are known, $l$ can be determined from Equation~\ref{eq:nat_freq}.
     The estimated length for this simulation is \SI{0.953}{\metre}.
     The actual cable length is \SI{1}{\metre}, therefore this estimation error is 4.7\%.
-    As documented by \cite{Erasmus2020} and \cite{Slabber2020}, an error of this magnitude is acceptably small and still results in effective control with a \gls{LQR}.
-    It was also shown by \cite{Erasmus2020} and \cite{Slabber2020} that this estimation method is effective for a range of different payloads in simulation.
+    As documented by \cite{Slabber2020} and \cite{Erasmus2020}, an error of this magnitude is acceptably small and still results in effective control with a \gls{LQR}.
+    It was also shown by \cite{Slabber2020} and \cite{Erasmus2020} that this estimation method is effective for a range of different payloads in simulation.
 
     \input{system_id/plots/FFT_vel_step_subfigs}
 
